# infraninja

./: .gitignore  .mise.toml  CHANGELOG.md  README.md  generate_docs.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: main.yml  pytest.yml  ruff_linter.yml
deploy/: README.md  deploy.py  jinn.py
docs/: index.md
docs/facts/: full-facts.md  hardware.md  index.md  system-info.md
infraninja/: __init__.py  netdata.py
infraninja/actions/: README.md  __init__.py  acl_setup.py  apparmor_setup.py  arp_protection.py  auditd_setup.py  base.py  chkrootkit_setup.py  clamav_setup.py  disable_services.py  fail2ban_setup.py  firewall_setup.py  full_security_setup.py  full_setup.py  iptables_setup.py  kernel_hardening.py  lynis_setup.py  malware_protection.py  media_autorun_protection.py  netdata.py  nftables_setup.py  ntp_hardening.py  pf_setup.py  reboot_system.py  redis_auth_patch.py  rkhunter_setup.py  routing_controls.py  security_audit.py  security_hardening.py  security_package_install.py  smtp_hardening.py  ssh_hardening.py  ssh_keys.py  suricata_setup.py  uae_compliance_audit.py  update_and_upgrade.py
infraninja/connectors/: README.md  __init__.py  pssh.py
infraninja/deploys/info_fetch/: __init__.py  custom_facts.py  info_fetch.py
infraninja/deploys/ssh_keys/: __init__.py  defaults.py  ssh_keys.py  util.py
infraninja/facts/: __init__.py  base.py  full_facts.py  hardware.py  system_info.py
infraninja/inventories/: __init__.py  base.py  coolify.py  jinn.py
infraninja/inventory/: coolify.py  coolify_manager.py  jinn.py
infraninja/security/alpine/: fail2ban_setup.py  install_tools.py  iptables_setup.py  suricata_setup.py
infraninja/security/common/: acl.py  arp_poisoning_protection.py  auditd_setup.py  chkrootkit_setup.py  common_install.py  disable_services.py  fail2ban_setup.py  iptables_setup.py  kernel_hardening.py  media_autorun.py  nftables_setup.py  reboot_system.py  smtp_hardening.py  ssh_hardening.py  update_packages.py
infraninja/security/freebsd/: acl.py  bsm_setup.py  chkrootkit_setup.py  disable_services.py  fail2ban_setup.py  install_tools.py  lynis_setup.py  pf_setup.py  rkhunter_setup.py  ssh_hardening.py  update_packages.py
infraninja/security/ubuntu/: auditd_setup.py  install_tools.py  iptables_setup.py  lynis_setup.py  (+2 more)
infraninja/utils/: list_actions.py  list_inventories.py  motd.py  pubkeys.py  pubkeys_delete.py
tests/: README.md  conftest.py  test_basic.py  test_deployment.py  test_netdata.py
tests/common/: test_acl.py  test_chkrootkit_setup.py  test_common_install.py  test_disable_services.py  test_media_autorun.py  test_ssh_hardening.py  test_update_packages.py
tests/freebsd/: test_acl.py  test_bsm_setup.py  test_chkrootkit_setup.py  test_disable_services.py  test_fail2ban_setup.py  test_lynis_setup.py  test_pf_setup.py  test_rkhunter_setup.py  test_ssh_hardening.py  test_update_packages.py
tests/inventory/: test_coolify.py  test_jinn.py  test_jinn_api.py  test_jinn_interactive.py  test_jinn_inventory.py  test_jinn_pytest.py
tests/utils/: test_motd.py  test_pubkeys.py  test_pubkeys_delete.py
(+1 files in other folders)
